--- a/style.css
+++ b/style.css
@@ -16,15 +16,15 @@
       margin: 0;
     }
 
-    h1{
+    h1 {
       font-size: 45px;
       text-align: center;
     }
 
-    h2{
+    h2 {
       text-align: center;
     }
-    
+
     .wrapper {
       width: 100%;
       margin: 0 auto;
@@ -124,7 +124,7 @@
       margin: 0;
     }
 
-    .wrapper_für_container{
+    .wrapper_für_container {
       max-width: 1400px;
       margin: auto;
     }
@@ -258,6 +258,7 @@
     /************************************************************************************************************************************/
     /* Responsive Layout für die Columns wenn Bildschirm größer als 2000px*/
     @media screen and (min-width: 2000px) {
+
       main,
       footer,
         {
@@ -277,27 +278,51 @@
     }
 
     /************************************************************************************************************************************/
-    .productbutton {
+    .gotoproductbutton {
       text-align: center;
-      /*Hierdurch wird der Button zentriert*/
     }
 
-    button {
-      background-color: #86D414;
+    .gotoproductbutton button {
+      text-align: center;
       font-size: 18px;
       font-weight: bolder;
+      background-color: #4CAF50;
       color: white;
       margin-top: 30px;
       margin-bottom: 30px;
-      padding: 5px 30px;
       border-radius: 5px;
+      border: none;
+      /*Hier wird die Geschwindigkeit des Buttons geregelt*/
+      box-shadow: 10px 15px 10px -7px black;
+      transition: ease-in-out all 300ms;
+      /*Hierdurch wird die Breite des Buttons geregelt*/
+      padding-left: 5%;
+      padding-right: 5%;
+    }
+
+    .gotoproductbutton button:hover {
+      background-color: white;
+      color: #0B9BCB;
+      border: solid 3px #0B9BCB;
+      transform: translate(0px, -10px);
+      box-shadow: 0px 30px 10px -10px grey;
+    }
+
+    .read_more_button {
+      border: none;
+      color: white;
+      padding: 14px 28px;
+      font-size: 16px;
+      cursor: pointer;
+      background-color: #4CAF50;
+      text-align: center;
+      border-radius: 50px;
       border: none;
       box-shadow: 10px 15px 10px -7px black;
       transition: ease-in-out all 300ms;
-      /*Hier wird die Geschwindigkeit des Buttons geregelt*/
     }
 
-    button:hover {
+    .read_more_button:hover {
       background-color: white;
       color: #0B9BCB;
       border: solid 3px #0B9BCB;
@@ -309,190 +334,189 @@
       /*Hier wird die Größe der Benefit Logos bestimmt*/
       width: 50%;
     }
-	
-	/*Tabelle mir den Technischen Daten */
-	table {
-	  font-family: arial, sans-serif;
-	  border-collapse: collapse;
-	  width: 100%;
-	}
 
-	td, th {
-	  border: 1px solid #dddddd;
-	  text-align: left;
-	  padding: 8px;
-	}
+    /*Tabelle mir den Technischen Daten */
+    table {
+      font-family: arial, sans-serif;
+      border-collapse: collapse;
+      width: 100%;
+    }
 
-	tr:nth-child(even) {
-	  background-color: #86D414;
-	}
+    td, th {
+      border: 1px solid #dddddd;
+      text-align: left;
+      padding: 8px;
+    }
 
-		/*Das große Bild am Anfang der Seite */
-	.FrontPicture {
-		/* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-	  /* background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("photographer.jpg");*/
-		background-color: lightblue;
-		background-image: url('Adobe_Bild.png');
-		height: 50%;
-		background-repeat: no-repeat;
-	  background-size: cover;
-		background-position: center;
-		position: relative;
-	  padding: 200px;
-		/*color: black;
+    tr:nth-child(even) {
+      background-color: #86D414;
+    }
+
+    /*Das große Bild am Anfang der Seite */
+    .FrontPicture {
+      /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+      /* background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("photographer.jpg");*/
+      background-color: lightblue;
+      background-image: url('Adobe_Bild.png');
+      height: 50%;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      position: relative;
+      padding: 200px;
+      /*color: black;
 	  text-align: center;
 		margin: 0;*/
-	}
+    }
 
-	/* Der Text mittig auf dem FrontPicture*/
-	.FrontPicture-Text {
-	  text-align: center;
-	  position: absolute;
-	  top: 50%;
-	  left: 50%;
-	  transform: translate(-50%, -50%);
-	  color: white;
-	}
+    /* Der Text mittig auf dem FrontPicture*/
+    .FrontPicture-Text {
+      text-align: center;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: white;
+    }
 
-	.Inhaltstrenner{
-		background-color: #77A1D9;
-		background-size: cover;
-		background-position: center;
-		color: white;
-		padding: 30px;
-		text-align: center;	
-		margin-bottom: 0px;
-	}
+    .Inhaltstrenner {
+      background-color: #77A1D9;
+      background-size: cover;
+      background-position: center;
+      color: white;
+      padding: 30px;
+      text-align: center;
+      margin-bottom: 0px;
+    }
 
-	.product-data{
-		padding: 55px;
-	}
+    .product-data {
+      padding: 55px;
+    }
 
-	/* Erster Container mit Produktdaten */
-	.container-1-Produktdaten{
-		padding: 0px 64px 5px 64px;
-		background-color: white;
-	}
+    /* Erster Container mit Produktdaten */
+    .container-1-Produktdaten {
+      padding: 0px 64px 5px 64px;
+      background-color: white;
+    }
 
-	/* Zweiter Container mit Produktdaten */
-	.container-produktdaten{	
-		padding: 10px 20px 10px 20px;
-		background-color: #BDD9F2;
-		margin: auto;
-		font-family: arial;
-	}
+    /* Zweiter Container mit Produktdaten */
+    .container-produktdaten {
+      padding: 10px 20px 10px 20px;
+      background-color: #BDD9F2;
+      margin: auto;
+      font-family: arial;
+    }
 
-	.b-white{
-		background-color:white!important;
-	}
+    .b-white {
+      background-color: white !important;
+    }
 
-	.row:after {
-	  content: "";
-	  display: table;
-	  clear: both
-	}
+    .row:after {
+      content: "";
+      display: table;
+      clear: both
+    }
 
-	.column-50 {
-	  float: left;
-	  width: 50%;
-	  padding: 20px;
-	}
+    .column-50 {
+      float: left;
+      width: 50%;
+      padding: 20px;
+    }
 
+    img {
+      display: block;
+      height: auto;
+      max-width: 100%;
+    }
 
+    .container-1-Produktdaten img {
+      width: auto;
+    }
 
-	.button {
+    .quantity, .color {
+      float: right;
+      width: 100px;
+      margin-right: 40%;
+    }
 
-	  border: none;
-	  color: white;
-	  padding: 14px 28px;
-	  font-size: 16px;
-	  cursor: pointer;
-	  background-color: #4CAF50;
-	  float: right
-	}
+    .buy-button {
+      border: 1px solid #8bd977;
+      width: 70%;
+      text-align: center;
+      margin-top: 20px;
+      margin-left: auto;
+      margin-right: auto;
+      padding: 20px;
+      margin-top: 5%;
+    }
 
-	img {
-	  display: block;
-	  height: auto;
-	  max-width: 100%;
-	}
+    .buy-button a {
+      color: #8bd977;
+      text-decoration: none;
+    }
 
-	.container-1-Produktdaten img{
-		width: auto;
-	}
+    .buy-button:hover {
+      background: #8bd977;
+    }
 
-	.quantity, .color{	
-		float: right;
-		width: 100px;
-		margin-right: 40%;
-	}
+    .buy-button a:hover {
+      color: white;
+      text-decoration: none;
+    }
 
-	.buy-button {
-		border: 1px solid #8bd977;
-		width: 70%;
-		text-align: center;
-		margin-top: 20px;
-		margin-left: auto;
-		margin-right: auto;
-		padding: 20px;
-		margin-top: 5%;
-	}
+    .white-gap {
+      padding: 10px;
+    }
 
-	.buy-button a {
-		color: #8bd977;
-		text-decoration: none;
-	}
-	.buy-button:hover {
-		background: #8bd977;
-	}
-	.buy-button a:hover {
-		color: white;
-		text-decoration: none;
-	}
-	.white-gap{
-		padding: 10px;
-	}
-	.text-center{
-		text-decoration: none;
-		text-align: center;
-	}
-	.p-b-0{
-		padding-bottom: 0px;
-	}
-	.p-t-0{
-		padding-top: 0px;
-	}
-	.f-25{
-		font-size: 25px;
-	}
-	.f-10{
-		font-size: 10px;
-	}
-	.m-t-35{
-		margin-top: 35px;
-	}
-	.column-50 p{
-		text-align: justify;
-		line-height: 20px;
-	}
-	/* Responsive Layout für die Columns wenn Bildschirm kleiner als 768px*/
-	@media screen and (max-width: 768px) {
-	  .column-50,
-	  .column-50 {
-		width: 100%;
-		text-align: center;
-	  }
-	  img {
-		margin: auto;
-	  }
-	}
+    .text-center {
+      text-decoration: none;
+      text-align: center;
+    }
 
-	/* Responsive layout - when the screen is less than 768px wide, make the
+    .p-b-0 {
+      padding-bottom: 0px;
+    }
+
+    .p-t-0 {
+      padding-top: 0px;
+    }
+
+    .f-25 {
+      font-size: 25px;
+    }
+
+    .f-10 {
+      font-size: 10px;
+    }
+
+    .m-t-35 {
+      margin-top: 35px;
+    }
+
+    .column-50 p {
+      text-align: justify;
+      line-height: 20px;
+    }
+
+    /* Responsive Layout für die Columns wenn Bildschirm kleiner als 768px*/
+    @media screen and (max-width: 768px) {
+
+      .column-50,
+      .column-50 {
+        width: 100%;
+        text-align: center;
+      }
+
+      img {
+        margin: auto;
+      }
+    }
+
+    /* Responsive layout - when the screen is less than 768px wide, make the
 	navigation links stack on top of each other instead of next to each other */
-	@media screen and (max-width: 768px) {
-	  .navbar a {
-		float: none;
-		width: 100%;
-	  }
-	}
-
+    @media screen and (max-width: 768px) {
+      .navbar a {
+        float: none;
+        width: 100%;
+      }
+    }
