--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     }
 
     body {
-      background-color: white;
+      background-color: #FFFFFF;
       margin: 0;
     }
 
@@ -50,14 +50,14 @@
 
     .topnav {
       overflow: hidden;
-      background-color: green;
+      background-color: #68C902;
       margin: 0px auto;
     }
 
     .topnav a {
       float: left;
       display: block;
-      color: #f2f2f2;
+      color: #FFFFFF;
       text-align: center;
       padding: 14px 16px;
       text-decoration: none;
@@ -65,8 +65,8 @@
     }
 
     .active {
-      background-color: #4CAF50;
-      color: white;
+      background-color: #B6E306;
+      color: #FFFFFF;
     }
 
     .topnav .icon {
@@ -82,7 +82,7 @@
       font-size: 17px;
       border: none;
       outline: none;
-      color: white;
+      color: #FFFFFF;
       padding: 14px 16px;
       background-color: inherit;
       font-family: inherit;
@@ -92,7 +92,7 @@
     .dropdown-content {
       display: none;
       position: absolute;
-      background-color: #f9f9f9;
+      background-color: #FFFFFF;
       min-width: 160px;
       box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
       z-index: 1;
@@ -109,7 +109,7 @@
 
     .topnav a:hover, .dropdown:hover .dropbtn {
       background-color: #555;
-      color: white;
+      color: #FFFFFF;
     }
 
     .dropdown-content a:hover {
@@ -177,7 +177,7 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      color: white;
+      color: #FFFFFF;
       text-shadow: 5px 5px 10px black;
       font-weight: bold;
     }
@@ -190,10 +190,10 @@
 
  /* Der Balken zwischen den einzelnen Abschnitten */
  .separator {
-   background-color: #77A1D9;
+   background-color: #02B7FF;
    background-size: cover;
    background-position: center;
-   color: white;
+   color: #FFFFFF;
    padding: 30px;
    text-align: center;
    margin: 0;
@@ -210,7 +210,7 @@
    padding-right: 64px;
    padding-top: 30px;
    padding-bottom: 30px;
-   background-color: white;
+   background-color: #FFFFFF;
  }
 
  /* Zweiter Container mit 2 Spalten links Text rechts Bild */
@@ -264,7 +264,7 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      color: white;
+      color: #FFFFFF;
       text-shadow: 5px 5px 10px black;
       font-weight: bold;
     }
@@ -297,7 +297,7 @@
     }
 
     tr:nth-child(even) {
-      background-color: #86D414;
+      background-color: #B6E306;
     }
 
 
@@ -308,7 +308,7 @@
     /* Erster Container mit Produktdaten */
     .container-1-Produktdaten {
       padding: 0px 64px 5px 64px;
-      background-color: white;
+      background-color: #FFFFFF;
     }
 
     /* Zweiter Container mit Produktdaten */
@@ -321,7 +321,7 @@
     /* Zweiter Container mit Produktdaten */
     .container-technische-daten {
       padding: 10px 20px 10px 20px;
-      background-color: white;
+      background-color: #FFFFFF;
       margin: auto;
     }
 
@@ -362,7 +362,7 @@
     }
 
     .buy-button a:hover {
-      color: white;
+      color: #FFFFFF;
       text-decoration: none;
     }
 
@@ -512,13 +512,13 @@
 
     .column-footer-left a {
       text-decoration: none;
-      color: white;
+      color: #FFFFFF;
     }
 
     .footer {
-      background-color: #4682B4;
+      background-color: #02B7FF;
       text-align: center;
-      color: white;
+      color: #FFFFFF;
     }
 
     .footer_content {
@@ -618,7 +618,7 @@
       text-align: center;
       font-size: 18px;
       font-weight: bolder;
-      background-color: #4CAF50;
+      background-color: #68C902;
       color: white;
       margin-top: 30px;
       margin-bottom: 30px;
@@ -633,20 +633,20 @@
     }
 
     .gotoproductbutton button:hover {
-      background-color: white;
-      color: #0B9BCB;
-      border: solid 3px #0B9BCB;
+      background-color: #FFFFFF;
+      color: #02B7FF;
+      border: solid 3px #02B7FF;
       transform: translate(0px, -10px);
       box-shadow: 0px 30px 10px -10px grey;
     }
 
     .read_more_button {
       border: none;
-      color: white;
+      color: #FFFFFF;
       padding: 14px 28px;
       font-size: 16px;
       cursor: pointer;
-      background-color: #4CAF50;
+      background-color: #68C902;
       text-align: center;
       border-radius: 50px;
       border: none;
@@ -655,9 +655,9 @@
     }
 
     .read_more_button:hover {
-      background-color: white;
-      color: #0B9BCB;
-      border: solid 3px #0B9BCB;
+      background-color: #FFFFFF;
+      color: #02B7FF;
+      border: solid 3px #02B7FF;
       transform: translate(0px, -10px);
       box-shadow: 0px 30px 10px -10px grey;
     }
